Watch Demo link updated

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <a href="https://github.com/OldManny/AutoMate/releases" target="_blank" class="btn btn-sm btn-outline-light ms-2">
                             Releases
                             </a>
-                            <a href="https://www.youtube.com/watch?v=IgbsXrXqhWA" target="_blank" class="btn btn-sm btn-outline-light ms-2">
+                            <a href="https://www.youtube.com/watch?v=Xl0G2ej_HjU" target="_blank" class="btn btn-sm btn-outline-light ms-2">
                             Watch Demo
                             </a>
                         </div>
