Button style added

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                     <div class="subheading mb-5">
                         Newbury · UK ·  
                         <a href="mailto:emanuel.ion.florea@gmail.com">
-                        <i class="fas fa-envelope"></i>
-                        
+                        <i class="fas fa-envelope"></i>                        
                         </a>
                     </div>
                     <p class="lead mb-5">A software engineer driven by a passion for building things that solve real-world problems. My experience covers the entire project lifecycle, from architecture to deployment, and as a product-focused developer, I am motivated by taking ownership and solving complex challenges in a team.</p>
@@ -89,7 +88,7 @@
                             <a href="https://github.com/OldManny/AutoMate/releases" target="_blank" class="btn btn-sm btn-outline-light ms-2">
                             Releases
                             </a>
-                            <a href="https://www.youtube.com/watch?v=Xl0G2ej_HjU" target="_blank" class="btn btn-sm btn-outline-light ms-2">
+                            <a href="https://www.youtube.com/watch?v=Xl0G2ej_HjU" target="_blank" class="btn btn-sm btn-outline-custom ms-2">
                             Watch Demo
                             </a>
                         </div>
@@ -118,7 +117,7 @@
                             <a href="https://github.com/OldManny/Snaze" target="_blank" class="btn btn-sm btn-outline-light">
                             GitHub Repo
                             </a>
-                            <a href="https://snaze.vercel.app" target="_blank" class="btn btn-sm btn-outline-light ms-2">
+                            <a href="https://snaze.vercel.app" target="_blank" class="btn btn-sm btn-outline-custom ms-2">
                             Live Demo
                             </a>
                         </div>
