--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
                 </div>
             </section>
-
+            <hr class="m-0" /> 
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
@@ -167,7 +167,7 @@
                     </div>
                 </div>
             </section>
-
+            <hr class="m-0" /> 
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
@@ -221,7 +221,7 @@
 
                 </div>
             </section>
-
+            <hr class="m-0" />
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
